unfix minor thing in RampedHaplotypeCallerEngine